Some misalignments were corrected

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10919,7 +10919,7 @@ a:focus {
 }
 
 .topbar {
-  height: 4.375rem;
+  height: 4.7rem;
 }
 
 .topbar #sidebarToggleTop {
